--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">f</h2>
+        <h2 class="card-title">5</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: f</li>
-            <li class="list-group-item">Email: <a href="mailto:f">f</a></li>
-            <li class="list-group-item">Office number: f</li>
+            <li class="list-group-item">ID: 69420</li>
+            <li class="list-group-item">Email: <a href="mailto:Max@Gmail.com">Max@Gmail.com</a></li>
+            <li class="list-group-item">Office number: Max</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">CodeMonkey</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:Bryan@gmail.com">Bryan@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/Bryan" target="_blank" rel="noopener noreferrer">Bryan</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">UCLA</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 55</li>
+            <li class="list-group-item">Email: <a href="mailto:Derek@gmail.com">Derek@gmail.com</a></li>
+            <li class="list-group-item">School: Derek</li>
         </ul>
     </div>
 </div>
